# caos-seminars

./: .gitignore  README.md
sem10/: main.c
sem11/: task0.c  test
sem12/: task0.c
sem13/: task0.c
sem14/: task0.c
sem15/: task0.c
sem16/: task0.c
sem17/: task0.c
sem18/: task0.c
sem19/: task0.c
sem2/: task0.sh
sem20/: task0.c
sem21/: task0.c
sem22/: task0.c
sem23/: Makefile  task0.c
sem24/: CMakeLists.txt  filesystem.txt  run.sh  task0.c
sem24/CMake/: FindFUSE.cmake
sem25/: CMakeLists.txt  task0.c  test.py
sem3/: cast.c  overflow.c  task0.c  test.c  union.c
sem4/: README.md  qemu_install.sh  toolchain_install.sh
sem4/crosscompile-c/: README.md  hello.c  run.sh
sem4/objdump/: README.md  objdump.sh
sem4/remote-degub-c/: README.md  arch.c  debug.sh  run_remote_debug.sh
sem4/task0/: run_asm.sh  task0.S  task0.c
sem5/: format_string_example.txt
sem5/asm_insertions/: asm_insertion_arm.c  asm_insertion_x86.c  run.sh
sem5/task0/: task0.S  task0.c
sem6/: main.c  run.sh  task0.S
sem7/: task0.S  task0.c
sem8/: main.c  run.sh  syscall.S
sem9/: input.txt  task0.c
